# simple-school-library

./: .gitignore  LICENSE  Readme.md  ToDo.md  config.yaml.example  pyproject.toml  runTests  tailwind.config.js  uiData.yaml
docs/: Tasks.md  database.md  layout.md  pageParts.md  searching.md  testing.md
htmlComponents/: createFormTemplates  forms.yaml
schoolLib/: app.py  borrowers.py  classes.py  classesBorrowers.py  cli.py  headerMenu.py  itemsBorrowed.py  itemsInfo.py  itemsPhysical.py  router.py  setup.py  templates.py
schoolLib/app/: __init__.py  finders.py  main.py  menus.py  metaStructure.py
schoolLib/app/admin/: __init__.py  login.py  menu.py
schoolLib/app/books/: __init__.py  itemsBorrowed.py  itemsInfo.py  itemsPhysical.py  menu.py  returnBooks.py
schoolLib/app/home/: __init__.py  home.py  menu.py
schoolLib/app/people/: __init__.py  borrowers.py  classes.py  classesBorrowers.py  menu.py
schoolLib/htmxComponents/: __init__.py  cli.py  forms.py  helpPages.py  htmx.py  jinja.py  layout.py  markdown.py  simpleComponents.py  tables.py  templates.yaml  utils.py
schoolLib/htmxComponents1/: __init__.py  layout.py  simpleComponents.py  tables.py
schoolLib/htmxComponents2/: __init__.py  forms.py  htmx.py  layout.py  markdown.py  simpleComponents.py  tables.py
schoolLib/markdown/: help.md  homePage.md
schoolLib/oldHtmxComponents/: cli.py  forms.py  jinja.py
schoolLib/setup/: __init__.py  authenticate.py  configuration.py  database.py  exceptions.py  metaStructure.py  responses.py  router.py  schema.yaml
schoolLib/statics/: Readme.md
schoolLib/templates/: 404.html  500.html  base.html  help.html  homePage.html
schoolLib/tools/: dumpDatabase.py  loadHelpPages.py  postInstall.py  reindexer.py  restoreDatabase.py  saveHelpPages.py  sslIterdump.py  updateDatabase.py  utils.py
scripts/: checkInitCode  docWebServer  getTinyMCE  installEditableSchoolLib  watchCSS
systemd/: Readme.md  schoolLib.service.example
tests/: Readme.md  ToDo.md  conftest.py  test_classes.py  test_configuration.py  test_database.py  test_newBrowser.py
tests/database/: test_database.py  test_database_sql_builders.py  test_db_borrowers.py  test_db_classes.py  test_db_helpPages.py  test_db_itemsBorrowed.py  test_db_itemsInfo.py  test_db_itemsPhysical.py
tests/fixtures/: Readme.md  database.py  helpPages.py
tests/htmxComponents/: test_htmx_borrowers.py  test_htmx_classes.py  test_htmx_helpPages.py  test_htmx_itemsBorrowed.py  test_htmx_itemsInfo.py  test_htmx_itemsPhysical.py  test_simpleComponents.py
tests/utils/: generator.py  preTests.py  sanityChecks.py  utils.py
(+42 files in other folders)
