[project]
name = "schoolLib"
version = "0.0.1"
description = "A simple school library"
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "starlette[full]>=0.37.2",
    "uvicorn>=0.30.1",
    "markdown>=3.6",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
slTemplateBuilder = "schoolLib.oldHtmxComponents.cli:cli"
slReindex         = "schoolLib.tools.reindexer:cli"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]
