[project]
name = "schoolLib"
version = "0.0.1"
description = "A simple school library"
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = [
    "starlette[full]>=0.37.2",
    "uvicorn>=0.30.1",
    "markdown>=3.6",
    "watchfiles>=0.22.0",
    "pygments>=2.18.0",
    "Starlette-Login>=0.2.1",
]
requires-python = ">=3.12"
license = {text = "MIT"}

[project.scripts]
slReindex         = "schoolLib.tools.reindexer:cli"
slPassword        = "schoolLib.setup.authenticate:passwordCli"
slUpdateDatabase  = "schoolLib.tools.updateDatabase:cli"
slDump            = "schoolLib.tools.dumpDatabase:cli"
slRestore         = "schoolLib.tools.restoreDatabase:cli"
slSaveHelpPages   = "schoolLib.tools.saveHelpPages:cli"
slLoadHelpPages   = "schoolLib.tools.loadHelpPages:cli"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = "tests/utils"

[tool.pdm.scripts]
post_install = { call = "schoolLib.tools.postInstall:patches" }
